# turtlebot3-waypoint-navigation

./: README.md  package.xml  setup.cfg  setup.py
autonomous_navigator/: goal_publisher.py  waypoint_navigator.py
autonomous_navigator/config/: nav2_params.yaml  rviz_config.rviz
autonomous_navigator/launch/: full_navigation_launch.py  gazebo_world_launch.py  navigation_launch.py
test/: test_copyright.py  test_flake8.py  test_pep257.py
